added starter columns

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitchen Helper</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    
+
 </head>
+
 <body>
     <section class="hero is-primary">
         <div class="hero-body">
@@ -22,14 +24,24 @@
         </div>
     </section>
 
+    <!-- https://bulma.io/documentation/columns/ -->
+
+    <div class="columns">
+
+        <div class="column is-one-fifth ml-2">
+
+        </div>
+
+        <div class="column is-four-fifths mr-2">
+
+        </div>
+
+    </div>
+
     <!-- script links -->
     <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
     <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
 
 </body>
+
 </html>
-
-
-
-  
-  
