added first row of recipe tiles

--- a/index.html
+++ b/index.html
@@ -34,6 +34,44 @@
 
         <div class="column is-four-fifths mr-2">
 
+            <!-- Start of recipe tiles here -->
+
+            <!-- Row 1 -->
+
+            <div class="tile is-ancestor">
+
+                <div class="tile is-parent">
+                    <article class="tile is-child box">
+                        <p class="title">Recipe Name</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+                </div>
+
+                <div class="tile is-parent">
+                    <article class="tile is-child box">
+                        <p class="title">Middle box</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+                </div>
+
+                <div class="tile is-parent">
+                    <article class="tile is-child box">
+                        <p class="title">Middle box</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+                </div>
+
+            </div>
+
         </div>
 
     </div>
