--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
     <div class="columns">
 
-        <div class="column is-one-fifth ml-2">
+        <div class="column is-one-quarter ml-2">
 
         </div>
 
-        <div class="column is-four-fifths mr-2">
+        <div class="column is-three-quarters mr-2">
 
             <!-- Start of recipe tiles here -->
 
             <!-- Row 1 -->
 
-            <div class="tile is-ancestor">
+            <div class="tile is-ancestor mt-2">
 
-                <div class="tile is-parent">
+                <button class="tile is-parent m-6">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -48,36 +48,91 @@
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
                     </article>
-                </div>
+                </button>
 
-                <div class="tile is-parent">
+                <button class="tile is-parent m-6">
                     <article class="tile is-child box">
-                        <p class="title">Middle box</p>
+                        <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
                     </article>
-                </div>
+                </button>
 
-                <div class="tile is-parent">
+                <!-- <button class="tile is-parent">
                     <article class="tile is-child box">
-                        <p class="title">Middle box</p>
+                        <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
                     </article>
-                </div>
+                </button> -->
 
             </div>
+
+            <!-- Row 2 -->
+
+            <div class="tile is-ancestor">
+
+                <button class="tile is-parent m-6">
+                    <article class="tile is-child box">
+                        <p class="title">Recipe Name</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+                </button>
+
+                <button class="tile is-parent m-6">
+                    <article class="tile is-child box">
+                        <p class="title">Recipe Name</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+                </button>
+
+            </div>
+
+            <!-- Row 3 -->
+
+            <div class="tile is-ancestor">
+
+                <button class="tile is-parent m-6">
+                    <article class="tile is-child box">
+                        <p class="title">Recipe Name</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+                </button>
+
+                <button class="tile is-parent m-6">
+                    <article class="tile is-child box">
+                        <p class="title">Recipe Name</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+                </button>
+
+            </div>
+
+
+            <!-- End of recipe tiles -->
 
         </div>
 
     </div>
 
     <!-- script links -->
-    <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
+    <!-- <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script> -->
     <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
 
 </body>
