--- a/index.html
+++ b/index.html
@@ -11,14 +11,25 @@
 </head>
 
 <body>
-    <section class="hero is-primary">
+
+    <section class="hero is-medium">
         <div class="hero-body">
-            <div class="container">
-                <h1 class="title">
+            <div class="container has-text-centered">
+                <h1 class="title is-size-1 has-text-weight-bold">
                     Kitchen Helper
                 </h1>
                 <h2 class="subtitle">
                     All your food. One place.
+                </h2>
+            </div>
+        </div>
+    </section>
+
+    <section class="hero is-primary">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h2 class="subtitle">
+                    Enter the ingredients left in your house on the left, see what you can make on the right
                 </h2>
             </div>
         </div>
@@ -38,7 +49,7 @@
 
             <!-- Row 1 -->
 
-            <div class="tile is-ancestor mt-2">
+            <div class="tile buttons is-ancestor mt-2">
 
                 <button class="tile is-parent m-6">
                     <article class="tile is-child box">
@@ -59,16 +70,6 @@
                         </figure>
                     </article>
                 </button>
-
-                <!-- <button class="tile is-parent">
-                    <article class="tile is-child box">
-                        <p class="title">Recipe Name</p>
-                        <p class="subtitle">With an image</p>
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
-                        </figure>
-                    </article>
-                </button> -->
 
             </div>
 
@@ -123,7 +124,6 @@
                 </button>
 
             </div>
-
 
             <!-- End of recipe tiles -->
 
