--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@
 
     </div>
 
+    <!-- End of main -->
+
+    <footer class="footer">
+
+        <div class="content has-text-centered">
+            <p>
+                <strong>Kitchen Helper</strong> by <a href="#">Pod 7</a>
+            </p>
+        </div>
+
+    </footer>
+
     <!-- script links -->
     <!-- <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script> -->
     <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
