--- a/index.html
+++ b/index.html
@@ -26,17 +26,33 @@
 
     <!-- https://bulma.io/documentation/columns/ -->
 
-    <div class="columns">
-
-        <div class="column is-one-fifth ml-2">
-
+<div class="columns">
+    <div class="column is-one-fifth ml-2">
+        <div class="tile is-ancestor">
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <p>Add your ingredients here</p>
+                        <div class="control">
+                            <input type="search" placeholder="Text input..."/>
+                        </div>
+                </article>    
+            </div>
         </div>
+    </div>
+</div>
+
+
+
+        
 
         <div class="column is-four-fifths mr-2">
 
+
+
+
         </div>
 
-    </div>
+    
 
     <!-- script links -->
     <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
