--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
                 <div class="tile is-parent">
                     <article class="tile is-child box">
                         <p>Add your ingredients here</p>
-                        <div class="control">
-                            <input type="search" placeholder="Text input..." />
+                        <div class="field">
+                            <div class="control">
+                                <input class="input" type="text" placeholder="text input">
+                                
+                            </div>
                         </div>
                     </article>
                 </div>
