finally got the hero image working

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                     All your food. One place.
                 </h2>
             </div>
+            <div>
+                <img src="https://assets.rebelmouse.io/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpbWFnZSI6Imh0dHBzOi8vYXNzZXRzLnJibC5tcy8xOTY0OTg2MC9vcmlnaW4uanBnIiwiZXhwaXJlc19hdCI6MTYxMjQxODUzNn0.zoog319egfzmGavLylSFGt2FDxqJV8lZOa5uOH4XFLY/img.jpg?width=1060&coordinates=0%2C24%2C0%2C25&height=555"
+                    alt="">
+            </div>
         </div>
     </section>
 
@@ -29,7 +33,11 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <h2 class="subtitle">
-                    Enter the ingredients left in your house on the left, see what you can make on the right
+                    Ever gone to make dinner, seen what's in your fridge, and been at a loss for what to make? Look no
+                    further!
+                    <br><br>
+                    To the left, enter the ingredients already in your house. To the right, see all the possibilities
+                    for what you can make!
                 </h2>
             </div>
         </div>
@@ -169,13 +177,15 @@
                                 <p>
                                     Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit
                                     amet
-                                    quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus.
+                                    quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta
+                                    dapibus.
                                     Lorem ipsum dolor sit amet,
                                     consectetur adipiscing elit. Donec sollicitudin molestie malesuada. Vestibulum ante
                                     ipsum primis in faucibus orci
                                     luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
                                     vel, ullamcorper sit amet ligula.
-                                    Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere blandit.
+                                    Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere
+                                    blandit.
                                     Mauris blandit aliquet elit,
                                     eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt.
                                 </p>
@@ -232,13 +242,13 @@
     </footer>
 
     <!-- script links -->
-    
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
     <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
-<script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
