added more classes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="tile buttons is-ancestor mt-2">
 
-                <button class="tile is-parent m-6 hide">
+                <button class="tile is-parent m-6 hide recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -78,7 +78,7 @@
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 hide">
+                <button class="tile is-parent m-6 hide recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -94,7 +94,7 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 hide">
+                <button class="tile is-parent m-6 hide recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -104,7 +104,7 @@
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 hide">
+                <button class="tile is-parent m-6 hide recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -120,7 +120,7 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 hide">
+                <button class="tile is-parent m-6 hide recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -130,7 +130,7 @@
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 hide">
+                <button class="tile is-parent m-6 hide recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
