--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <h2 class="subtitle">
-                    Enter the ingredients left in your house on the left, see what you can make on the right
+                    Enter the ingredients you have in your house on the left, then find a recipe you can make on the right.
                 </h2>
             </div>
         </div>
@@ -138,7 +138,7 @@
 
 
             <!-- Start of modal -->
-            <div class="modal">
+            <!-- <div class="modal"> -->
                 <div class="modal-background"></div>
                 <div class="modal-card">
                     <header class="modal-card-head">
@@ -149,7 +149,7 @@
                         <!-- Content ... -->
                         <div class="modal-content">
                             <p class="image is-2by1">
-                                <img src="https://bulma.io/images/placeholders/640x320.png" alt="">
+                                <img src="" alt="" id="instructions">
                             </p>
 
                             <div class="content">
@@ -185,9 +185,12 @@
                         <div class="modal-content">
                             <div class="content">
                                 <span>Nutrition Facts</span>
-                                <p class="image is-1by2">
-                                    <img src="https://bulma.io/images/placeholders/480x480.png" alt="">
-                                </p>
+                                <ul>
+                                    <li class="macroNutrients" id="calories"></li>
+                                    <li class="macroNutrients" id="carbs"></li>
+                                    <li class="macroNutrients" id="fat"></li>
+                                    <li class="macroNutrients" id="protein"></li>
+                                </ul>
                             </div>
                         </div>
 
@@ -208,7 +211,7 @@
                         </footer>
 
                     </section>
-                </div>
+                <!-- </div> -->
             </div>
             <!-- End of modal -->
 
@@ -232,13 +235,11 @@
     </footer>
 
     <!-- script links -->
-    
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <!-- <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-    <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
     <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
-<script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
