--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <div class="control">
                             <input type="search" placeholder="Text input..." />
                         </div>
+                        <button id="search-button">Search</button>
                     </article>
                 </div>
             </div>
