fixed click event

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <div class="tile buttons is-ancestor mt-2">
 
-                <button class="tile is-parent m-6 hide recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -79,7 +79,7 @@
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 hide recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -95,7 +95,7 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 hide recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -105,7 +105,7 @@
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 hide recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -121,7 +121,7 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 hide recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -131,7 +131,7 @@
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 hide recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
                         <p class="title">Recipe Name</p>
                         <p class="subtitle">With an image</p>
@@ -247,7 +247,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-    <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
+    <!-- <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script> -->
     <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
     <script src="./assets/js/script.js"></script>
 </body>
