--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
                 <div class="tile is-parent">
                     <article class="tile is-child box">
                         <p>Add your ingredients here</p>
-                        <div class="field">
+                        <br>
                             <div class="control">
-                                <input class="input" type="text" placeholder="text input">
-                                
+                                <input class="input" type="search">
                             </div>
-                        </div>
                     </article>
                 </div>
             </div>
