fixed html file on my local repo branch

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,21 +44,13 @@
                 <div class="tile is-parent">
                     <article class="tile is-child box">
                         <p>Add your ingredients here</p>
-                        <br>
-                            <div class="control">
-                                <input class="input" type="search">
-                            </div>
+                        <div class="control">
+                            <input type="search" placeholder="Text input..." />
+                        </div>
                     </article>
                 </div>
             </div>
         </div>
-    </div>
-
-
-        <div class="column is-one-quarter ml-2">
-
-
-        
 
         <div class="column is-three-quarters mr-2">
 
@@ -239,13 +232,9 @@
     </footer>
 
     <!-- script links -->
-    
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
+    <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
 
 </body>
 
