added input text field and buttons

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <section class="hero is-medium">
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h1 class="title is-size-1 has-text-weight-bold">
+                <h1 class="title is-1">
                     Kitchen Helper
                 </h1>
-                <h2 class="subtitle">
+                <h2 class="subtitle-is-2">
                     All your food. One place.
                 </h2>
             </div>
@@ -28,9 +28,9 @@
     <section class="hero is-primary">
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h2 class="subtitle">
-                    Enter the ingredients left in your house on the left, see what you can make on the right
-                </h2>
+                <h3 class="title-is-3">
+                    Enter your ingredients on the left, see what you can make on the right
+               </h3>
             </div>
         </div>
     </section>
@@ -43,10 +43,76 @@
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <article class="tile is-child box">
-                        <p>Add your ingredients here</p>
-                        <div class="control">
-                            <input type="search" placeholder="Text input..." />
-                        </div>
+                         <p>What's in your Pantry?</p>
+                         <br>
+                            <div class="field">
+                              <div class="control">
+                                <input class="input is-primary is-norma is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
+                              </div>
+                            </div>
+                            <div class="field">
+                              <div class="control">
+                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
+                              </div>
+                            </div>
+                            <div class="field">
+                              <div class="control">
+                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
+                              </div>
+                            </div>
+                            <div class="field">
+                              <div class="control">
+                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
+                              </div>
+                            </div>
+                             <div class="field">
+                              <div class="control">
+                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
+                              </div>
+                            </div>
+                             <div class="field">
+                              <div class="control">
+                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
+                              </div>
+                            </div>
+                             <div class="field">
+                              <div class="control">
+                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
+                              </div>
+                            </div>
+                                <label class="checkbox">
+                                    <input type="checkbox">
+                                        Vegan
+                                </label> 
+                                   <label class="checkbox">
+                                     <input type="checkbox">
+                                        Vegetarian
+                                </label> 
+                               <label class="checkbox">
+                                   <input type="checkbox">
+                                    Pescatarian
+                               </label> 
+                               <label class="checkbox">
+                                  <input type="checkbox">
+                                     Keto
+                               </label> 
+
+                                  <br>       
+                                  
+                                  <br>
+
+                               <div class="field is-grouped">
+                                   <p class="control">
+                                    <button class="button is-link">
+                                        Find Recipe
+                                    </button>
+                                   </p>
+                                   <p class="control">
+                                    <button class="button">
+                                        Cancel
+                                    </button>
+                                   </p>
+                                </div> 
                     </article>
                 </div>
             </div>
@@ -232,10 +298,11 @@
     </footer>
 
     <!-- script links -->
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
     <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js”></script>
-
+   
 </body>
 
 </html>
