added recipe-name class and removed subtitle

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
                 <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title">Recipe Name</p>
-                        <p class="subtitle">With an image</p>
+                        <p class="title recipe-name"></p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
@@ -81,8 +80,7 @@
 
                 <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title">Recipe Name</p>
-                        <p class="subtitle">With an image</p>
+                        <p class="title recipe-name"></p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
@@ -97,8 +95,7 @@
 
                 <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title">Recipe Name</p>
-                        <p class="subtitle">With an image</p>
+                        <p class="title recipe-name"></p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
@@ -107,8 +104,7 @@
 
                 <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title">Recipe Name</p>
-                        <p class="subtitle">With an image</p>
+                        <p class="title recipe-name"></p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
@@ -123,8 +119,7 @@
 
                 <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title">Recipe Name</p>
-                        <p class="subtitle">With an image</p>
+                        <p class="title recipe-name"></p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
@@ -133,8 +128,7 @@
 
                 <button class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title">Recipe Name</p>
-                        <p class="subtitle">With an image</p>
+                        <p class="title recipe-name"></p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
                         </figure>
