added function draft for rendering the recipe info to the tile cards

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
             <!-- Start of modal -->
             <!-- <div class="modal"> -->
-            <div class="modal-background"></div>
-            <div class="modal-card">
+            <div class="modal-background is-hidden"></div>
+            <div class="modal-card is-hidden">
                 <header class="modal-card-head">
                     <p class="modal-card-title">Recipe Name</p>
                     <button class="delete" aria-label="close"></button>
