--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="modal-card is-hidden">
                 <header class="modal-card-head">
                     <p class="modal-card-title">Recipe Name</p>
-                    <button class="delete" aria-label="close"></button>
+                    <button class="delete" aria-label="close" id="close-button"></button>
                 </header>
                 <section class="modal-card-body">
                     <!-- Content ... -->
