cleaned up HTML

--- a/index.html
+++ b/index.html
@@ -48,86 +48,64 @@
     <div class="columns">
 
         <div class="column is-one-quarter ml-2">
+
+            <!-- Start of search box -->
+
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <article class="tile is-child box">
-                         <p>What's in your Pantry?</p>
-                         <br>
-                            <div class="field">
-                              <div class="control">
-                                <input class="input is-primary is-norma is-rounded" id = "ingredient_1"type="search" placeholder="Enter ingredients here" style="font-style:italic">
-                              </div>
+                        <p>What's in your Pantry?</p>
+                        <br>
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-primary is-norma is-rounded" id="ingredient_1" type="search"
+                                    placeholder="Enter ingredients here" style="font-style:italic">
                             </div>
-                            <div class="field">
-                              <div class="control">
-                                <input class="input is-primary is-normal is-rounded" id = "ingredient_2"type="search" placeholder="Enter ingredients here" style="font-style:italic">
-                              </div>
-                            </div>
-                            <div class="field">
-                              <div class="control">
-                                <input class="input is-primary is-normal is-rounded" id = "ingredient_3"type="search" placeholder="Enter ingredients here" style="font-style:italic">
-                              </div>
-                            </div>
-                            <div class="field">
-                              <div class="control">
-                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
-                              </div>
-                            </div>
-                             <div class="field">
-                              <div class="control">
-                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
-                              </div>
-                            </div>
-                             <div class="field">
-                              <div class="control">
-                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
-                              </div>
-                            </div>
-                             <div class="field">
-                              <div class="control">
-                                <input class="input is-primary is-normal is-rounded" type="search" placeholder="Enter ingredients here" style="font-style:italic">
-                              </div>
-                            </div>
-                                <label class="checkbox">
-                                    <input type="checkbox">
-                                        Vegan
-                                </label> 
-                                   <label class="checkbox">
-                                     <input type="checkbox">
-                                        Vegetarian
-                                </label> 
-                               <label class="checkbox">
-                                   <input type="checkbox">
-                                    Pescatarian
-                               </label> 
-                               <label class="checkbox">
-                                  <input type="checkbox">
-                                     Keto
-                               </label> 
-
-                                  <br>       
-                                  
-                                  <br>
-
-                               <div class="field is-grouped">
-                                   <p class="control">
-                                    <button class="button is-link" id = "find-recipe-btn">
-                                        Find Recipe
-                                    </button>
-                                   </p>
-                                   <p class="control">
-                                    <button class="button">
-                                        Cancel
-                                    </button>
-                                   </p>
-                                </div> 
-                        <p>Add your ingredients here</p>
-                        <div class="control">
-                            <input type="search" placeholder="Text input..." />
                         </div>
-                        <button id="search-button">Search</button>
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-primary is-normal is-rounded" id="ingredient_2" type="search"
+                                    placeholder="Enter ingredients here" style="font-style:italic">
+                            </div>
+                        </div>
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-primary is-normal is-rounded" id="ingredient_3" type="search"
+                                    placeholder="Enter ingredients here" style="font-style:italic">
+                            </div>
+                        </div>
+
+                        <!-- <label class="checkbox">
+                            <input type="checkbox">
+                            Vegan
+                        </label>
+                        <label class="checkbox">
+                            <input type="checkbox">
+                            Vegetarian
+                        </label>
+                        <label class="checkbox">
+                            <input type="checkbox">
+                            Pescatarian
+                        </label>
+                        <label class="checkbox">
+                            <input type="checkbox">
+                            Keto
+                        </label> -->
+
+                        <br>
+
+                        <div class="field is-grouped">
+                            <p class="control">
+                                <button class="button is-link" id="find-recipe-btn">
+                                    Find Recipe
+                                </button>
+                            </p>
+                        </div>
+
                     </article>
                 </div>
+
+                <!-- End of search box -->
             </div>
         </div>
 
@@ -311,16 +289,12 @@
 
     <!-- script links -->
 
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
-   
+
 </body>
 
 </html>
