edited placeholder text

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
                         <div class="field">
                             <div class="control">
                                 <input class="input is-primary is-norma is-rounded" id="ingredient_1" type="search"
-                                    placeholder="Enter ingredients here" style="font-style:italic">
+                                    placeholder="Enter an ingredient here" style="font-style:italic">
                             </div>
                         </div>
                         <div class="field">
                             <div class="control">
                                 <input class="input is-primary is-normal is-rounded" id="ingredient_2" type="search"
-                                    placeholder="Enter ingredients here" style="font-style:italic">
+                                    placeholder="Enter an ingredient here" style="font-style:italic">
                             </div>
                         </div>
                         <div class="field">
                             <div class="control">
                                 <input class="input is-primary is-normal is-rounded" id="ingredient_3" type="search"
-                                    placeholder="Enter ingredients here" style="font-style:italic">
+                                    placeholder="Enter an ingredient here" style="font-style:italic">
                             </div>
                         </div>
 
