--- a/index.html
+++ b/index.html
@@ -189,82 +189,82 @@
 
 
             <!-- Start of modal -->
-            <!-- <div class="modal"> -->
-            <div class="modal-background is-hidden"></div>
-            <div class="modal-card is-hidden">
-                <header class="modal-card-head">
-                    <p class="modal-card-title">Recipe Name</p>
-                    <button class="delete" aria-label="close" id="close-button"></button>
-                </header>
-                <section class="modal-card-body">
-                    <!-- Content ... -->
-                    <div class="modal-content">
-                        <p class="image is-2by1">
-                            <img src="" alt="" id="instructions">
-                        </p>
-
-                        <div class="content">
-                            <span>Recipe Instructions:</span>
-
-                            <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
-                                Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla porttitor
-                                accumsan tincidunt.
-                                Nulla quis lorem ut libero malesuada feugiat. Cras ultricies ligula sed magna dictum
-                                porta. Curabitur arcu erat,
-                                accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit.
-                                Nulla quis lorem ut libero malesuada feugiat.
+            <div class="modal is-active is-hidden">
+                <div class="modal-background"></div>
+                <div class="modal-card">
+                    <header class="modal-card-head">
+                        <p class="modal-card-title">Recipe Name</p>
+                        <button class="delete" aria-label="close" id="close-button"></button>
+                    </header>
+                    <section class="modal-card-body">
+                        <!-- Content ... -->
+                        <div class="modal-content">
+                            <p class="image is-2by1">
+                                <img src="" alt="" id="instructions">
                             </p>
 
-                            <p>
-                                Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit
-                                amet
-                                quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta
-                                dapibus.
-                                Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit. Donec sollicitudin molestie malesuada. Vestibulum ante
-                                ipsum primis in faucibus orci
-                                luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
-                                vel, ullamcorper sit amet ligula.
-                                Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere
-                                blandit.
-                                Mauris blandit aliquet elit,
-                                eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt.
-                            </p>
+                            <div class="content">
+                                <span>Recipe Instructions:</span>
+
+                                <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                                    Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat.
+                                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla porttitor
+                                    accumsan tincidunt.
+                                    Nulla quis lorem ut libero malesuada feugiat. Cras ultricies ligula sed magna dictum
+                                    porta. Curabitur arcu erat,
+                                    accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit.
+                                    Nulla quis lorem ut libero malesuada feugiat.
+                                </p>
+
+                                <p>
+                                    Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit
+                                    amet
+                                    quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta
+                                    dapibus.
+                                    Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. Donec sollicitudin molestie malesuada. Vestibulum ante
+                                    ipsum primis in faucibus orci
+                                    luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
+                                    vel, ullamcorper sit amet ligula.
+                                    Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere
+                                    blandit.
+                                    Mauris blandit aliquet elit,
+                                    eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt.
+                                </p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="modal-content">
-                        <div class="content">
-                            <span>Nutrition Facts</span>
-                            <ul>
-                                <li class="macroNutrients" id="calories"></li>
-                                <li class="macroNutrients" id="carbs"></li>
-                                <li class="macroNutrients" id="fat"></li>
-                                <li class="macroNutrients" id="protein"></li>
-                            </ul>
+                        <div class="modal-content">
+                            <div class="content">
+                                <span>Nutrition Facts</span>
+                                <ul>
+                                    <li class="macroNutrients" id="calories"></li>
+                                    <li class="macroNutrients" id="carbs"></li>
+                                    <li class="macroNutrients" id="fat"></li>
+                                    <li class="macroNutrients" id="protein"></li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
 
-                    <footer class="modal-card-foot">
-                        <button class="button is-primary">
-                            <span class="icon is-large">
-                                <i class="fas fa-angle-left fas fa-2x"></i>
-                            </span>
-                            <h4>Prev</h4>
-                        </button>
+                        <footer class="modal-card-foot">
+                            <button class="button is-primary">
+                                <span class="icon is-large">
+                                    <i class="fas fa-angle-left fas fa-2x"></i>
+                                </span>
+                                <h4>Prev</h4>
+                            </button>
 
-                        <button class="button is-primary">
-                            <h4>Next</h4>
-                            <span class="icon is-large">
-                                <i class="fas fa-angle-right fas fa-2x"></i>
-                            </span>
-                        </button>
-                    </footer>
+                            <button class="button is-primary">
+                                <h4>Next</h4>
+                                <span class="icon is-large">
+                                    <i class="fas fa-angle-right fas fa-2x"></i>
+                                </span>
+                            </button>
+                        </footer>
 
-                </section>
-                <!-- </div> -->
+                    </section>
+                </div>
             </div>
             <!-- End of modal -->
 
